minor error
